Correction des tailles de tesxte et des contrastes

--- a/style.css
+++ b/style.css
@@ -269,6 +269,9 @@ a:hover {
 .row a{
     color: #1C1C1C !important;
 }
+.black{
+    color: #1C1C1C !important;
+}
 
 .voffset {
     margin-top: 30px;
